--- a/Prueba_con_server/package.json
+++ b/Prueba_con_server/package.json
@@ -4,7 +4,8 @@
   "description": "Prueba para app web de BDD",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prueba": "nodemon app"
   },
   "keywords": [],
   "author": "Heber Jair León Ramírez",
