--- a/Prueba_con_server/package.json
+++ b/Prueba_con_server/package.json
@@ -2,17 +2,27 @@
   "name": "Prueba_con_server",
   "version": "1.0.0",
   "description": "Prueba para app web de BDD",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prueba": "nodemon app"
+    "prueba": "nodemon app --exec babel-node"
   },
   "keywords": [],
   "author": "Heber Jair León Ramírez",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "cowsay": "^1.5.0",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "mssql": "^7.3.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
+    "@babel/preset-env": "^7.16.4"
   }
 }
